--- a/games/lightbot.html
+++ b/games/lightbot.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/lightbot.html" />
   <title>Lightbot</title>
   <meta property="og:description"
     content="Lightbot is a game where you code and control a bot with a light. Play for Free at CoolUBG" />
