--- a/games/fishy!.html
+++ b/games/fishy!.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/fishy!.html" />
   <title>Fishy</title>
   <meta property="og:description"
     content="Fishy is a game where you are a fish. Play for Free at CoolUBG" />
