--- a/games/burrito-bison-launcha-libre.html
+++ b/games/burrito-bison-launcha-libre.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/burrito-bison-launcha-libre.html" />
   <title>Burrito Bison Launcha Libre</title>
   <meta property="og:description"
     content="Burrito Bison Revenge is a game where you are a bison. Play for Free at CoolUBG" />
