--- a/games/stick-rpg.html
+++ b/games/stick-rpg.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/stick-rpg.html" />
   <title>Stick RPG Complete</title>
   <meta property="og:description" content="Stick RPG is a complete RPG starring a stickman. Play for Free at CoolUBG" />
   <meta name="description" content="Stick RPG is a complete RPG starring a stickman. Play for Free at CoolUBG" />
