--- a/games/basket-random.html
+++ b/games/basket-random.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/basket-random.html" />
   <title>Basket Random</title>
   <meta property="og:description"
     content="Basket Random is a random game with baskets. Play for Free at CoolUBG" />
