--- a/games/8-ball-pool.html
+++ b/games/8-ball-pool.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/8-ball-pool.html" />
   <title>8 Ball Pool</title>
   <meta property="og:description"
     content="8 Ball Pool is 8 ball pool online and unblocked. Play for Free at CoolUBG" />
