--- a/games/bloons-td-3.html
+++ b/games/bloons-td-3.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/bloons-td-3.html" />
   <title>Bloons TD 3</title>
   <meta property="og:description"
     content="Bloons TD is a tower defence against balloons. Play for Free at CoolUBG" />
