--- a/games/papa-louie-when-pizzas-attack.html
+++ b/games/papa-louie-when-pizzas-attack.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/papa-louie-when-pizzas-attack.html" />
   <title>Papa Louie: When Pizzas Attack!</title>
   <meta property="og:description"
     content="Papa Louie unblocked. Play for Free at CoolUBG" />
