--- a/games/age-of-war.html
+++ b/games/age-of-war.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/age-of-war.html" />
   <title>Age of war</title>
   <meta property="og:description"
     content="Age of war is a game set in the age of war. Play for Free at CoolUBG" />
