--- a/games/boxel-rebound.html
+++ b/games/boxel-rebound.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/boxel-rebound.html" />
   <title>Boxel Rebound</title>
   <meta property="og:description"
     content="Play over 50 levels of box-jumping madness! Design and share your own levels. Play for Free at CoolUBG" />
