--- a/games/floodrunner-4.html
+++ b/games/floodrunner-4.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/floodrunner-4.html" />
   <title>Floodrunner 4</title>
   <meta property="og:description"
     content="Flood Runner is a game where you run from a flood. Play for Free at CoolUBG" />
