--- a/games/alien-hominid.html
+++ b/games/alien-hominid.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/alien-hominid.html" />
   <title>Alien Hominid</title>
   <meta property="og:description"
     content="Age of war is a game set in the age of war. Play for Free at CoolUBG" />
