--- a/games/fireboy&watergirl-2.html
+++ b/games/fireboy&watergirl-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/fireboy&watergirl-2.html" />
   <title>Fireboy and Watergirl 2</title>
   <meta property="og:description"
     content="Fireboy and Watergirl is a game where you play as fireboy or watergirl. Play for Free at CoolUBG" />
