--- a/games/bad-piggies.html
+++ b/games/bad-piggies.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/bad-piggies.html" />
   <title>Bad Piggies</title>
   <meta property="og:description"
     content="Bad Piggies is a game with bad piggies. Play for Free at CoolUBG" />
