--- a/games/cloud-platformer-fun.html
+++ b/games/cloud-platformer-fun.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/cloud-platformer-fun.html" />
   <title>Multiplayer Cloud Platformer Fun</title>
   <meta property="og:description" content="Cloud Platformer Fun is a fun cloud multiplayer platformer. Play for Free at CoolUBG" />
   <meta name="description" content="Cloud Platformer Fun is a fun cloud multiplayer platformer. Play for Free at CoolUBG" />
