--- a/games/fnaf-2.html
+++ b/games/fnaf-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/fnaf-2.html" />
   <title>Five Nights at Freddy's 2</title>
   <meta property="og:description"
     content="Spend 5 nights at a pizza place, but something doesnt seem right. Play for Free at CoolUBG" />
