--- a/games/circloo-2.html
+++ b/games/circloo-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/circloo-2.html" />
   <title>CircloO 2</title>
   <meta property="og:description"
     content="game roll the circle in the cirle unblocked 2. Play for Free at CoolUBG" />
