--- a/games/appel-multiplayer.html
+++ b/games/appel-multiplayer.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/appel-multiplayer.html" />
   <title>Appel multiplayer</title>
   <meta property="og:description"
     content="Appel but multiplayer and online. Play for Free at CoolUBG" />
