--- a/games/gun-mayhem-2.html
+++ b/games/gun-mayhem-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/gun-mayhem-2.html" />
   <title>Gun Mayhem 2</title>
   <meta property="og:description"
     content="Gun Mayhem is a game with guns and mayhem. Play for Free at CoolUBG" />
