--- a/games/bitlife.html
+++ b/games/bitlife.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/bitlife.html" />
   <title>Bitlife</title>
   <meta property="og:description"
     content="Bitlife is a game that is a bit like life. Play for Free at CoolUBG" />
