--- a/games/cut-the-rope.html
+++ b/games/cut-the-rope.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/cut-the-rope.html" />
   <title>Cut the Rope</title>
   <meta property="og:description"
     content="Cut the Rope is a game where you cut the rope. Play for Free at CoolUBG" />
