--- a/games/cactus-mccoy-2.html
+++ b/games/cactus-mccoy-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/cactus-mccoy-2.html" />
   <title>Cactus McCoy 2</title>
   <meta property="og:description"
     content="Cactus McCoy is a game where you are a cactus. Play for Free at CoolUBG" />
