--- a/games/tomb-of-the-mask.html
+++ b/games/tomb-of-the-mask.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/tomb-of-the-mask.html" />
   <title>Tomb of the Mask</title>
   <meta property="og:description"
     content="Tomb of the mask is a game where you are in a tomb with a mask. Play for Free at CoolUBG" />
