--- a/games/merge-melon.html
+++ b/games/merge-melon.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/merge-melon.html" />
   <title>Suika Game</title>
   <meta property="og:description"
     content="Merge Melon is a game where you merge melons. Play for Free at CoolUBG" />
