--- a/games/slope.html
+++ b/games/slope.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/slope.html" />
   <title>Slope</title>
   <meta property="og:description"
     content="Slope is a game where you roll down a slope. Play for Free at CoolUBG" />
