--- a/games/crossy-road.html
+++ b/games/crossy-road.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/crossy-road.html" />
   <title>Crossy Road</title>
   <meta property="og:description"
     content="Crossy Road is a game where you cross the road. Play for Free at CoolUBG" />
