--- a/games/awesome-tanks-2.html
+++ b/games/awesome-tanks-2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/awesome-tanks-2.html" />
   <title>Awesome Tanks 2</title>
   <meta property="og:description"
     content="Awesome tanks 2 is a game with awesome tanks. Play for Free at CoolUBG" />
