--- a/games/sigil-1&2.html
+++ b/games/sigil-1&2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/sigil-1&2.html" />
   <title>Sigil 1 and Sigil 2 Online Web HTML5 </title>
   <meta property="og:description"
     content="Sigil DOOM unblocked and online. Play for Free at CoolUBG" />
