--- a/games/a-dark-room.html
+++ b/games/a-dark-room.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/a-dark-room.html" />
   <title>A Dark Room</title>
   <meta property="og:description"
     content="A Dark room is a game where you are in a dark room. Play for Free at CoolUBG" />
