--- a/games/neverball.html
+++ b/games/neverball.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/neverball.html" />
   <title>Neverball</title>
   <meta property="og:description"
     content="Neverball is a game where you always ball. Play for Free at CoolUBG" />
