--- a/games/moto-x3m-spooky-land.html
+++ b/games/moto-x3m-spooky-land.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/moto-x3m-spooky-land.html" />
   <title>Moto X3M Spooky Land</title>
   <meta property="og:description"
     content="Moto X3M is a 2d Motorcycle racing game. Play for Free at CoolUBG" />
