--- a/games/mini-metro-london.html
+++ b/games/mini-metro-london.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/mini-metro-london.html" />
   <title>Mini Metro</title>
   <meta property="og:description"
     content="Mini Metro is a game where you build a mini metro. Play for Free at CoolUBG" />
