--- a/games/line-rider.html
+++ b/games/line-rider.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/line-rider.html" />
   <title>Line Rider</title>
   <meta property="og:description"
     content="Line Rider is a game where you ride lines. Play for Free at CoolUBG" />
