--- a/games/johnny-upgrade.html
+++ b/games/johnny-upgrade.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/johnny-upgrade.html" />
   <title>Johnny Upgrade</title>
   <meta property="og:description"
     content="Johnny Upgrade is a game where you upgrade yourself (and guns and abilities and stuff). Play for Free at CoolUBG" />
