--- a/games/hextris.html
+++ b/games/hextris.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/hextris.html" />
   <title>Hextris</title>
   <meta property="og:description"
     content="Hextris is hexagon tetris. Play for Free at CoolUBG" />
