--- a/games/heretic.html
+++ b/games/heretic.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/heretic.html" />
   <title>Heretic js-dos</title>
   <meta property="og:description"
     content="Heretic game unblocked and online. Play for Free at CoolUBG" />
