--- a/games/escaping-the-prison.html
+++ b/games/escaping-the-prison.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/escaping-the-prison.html" />
   <title>Escaping the Prison</title>
   <meta property="og:description"
     content="Escaping the prison is a game where you escape the prison. Play for Free at CoolUBG" />
