--- a/games/duck-life-3.html
+++ b/games/duck-life-3.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/duck-life-3.html" />
   <title>Duck Life 3</title>
   <meta property="og:description"
     content="Duck life is a game where you explore the life of a duck. Play for Free at CoolUBG" />
