--- a/games/cookie-clicker.html
+++ b/games/cookie-clicker.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/cookie-clicker.html" />
   <title>Cookie Clicker</title>
   <meta property="og:description"
     content="Cookie clicker is a game where you click a cookie. Play for Free at CoolUBG" />
