--- a/games/2048.html
+++ b/games/2048.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/2048.html" />
   <title>2048</title>
   <meta property="og:description"
     content="2048 is a game where you combine numbers, to get to 2048. Play for Free at CoolUBG" />
