--- a/games/asteroids.html
+++ b/games/asteroids.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="canonical" href="https://coolsciencegamesubg.github.io/games/asteroids.html" />
   <title>Asteroids</title>
   <meta property="og:description"
     content="Asteroids is a game with asteroids. Play for Free at CoolUBG" />
